tests/fsharp/typecheck/sigs/neg116.bsl

neg116.fs(10,34,10,47): ilxgen error FS0041: No overloads match for method 'op_Multiply'.

Known return type: 'a

Known type parameters: < Microsoft.FSharp.Core.float , Neg116.Polynomial >

Available overloads:
 - static member Neg116.Polynomial.( * ) : s: Microsoft.FSharp.Core.decimal * p: Neg116.Polynomial -> Neg116.Polynomial // Argument 's' doesn't match
 - static member Neg116.Polynomial.( * ) : s: Neg116.Complex * p: Neg116.Polynomial -> Neg116.Polynomial // Argument 's' doesn't match
